# bolt

./: .gitignore  .mxproject  CLAUDE.md  CMakeLists.txt  README.md  STM32F103XX_FLASH.ld  bolt.ioc  crc.py
.claude/agent-memory/embedded-test-engineer/: MEMORY.md
.claude/agents/: embedded-test-engineer.md
.claude/skills/implement-tests/: SKILL.md
Bolt/Inc/: command.hpp  debug.h  definitions.hpp  interface.hpp  peripherals.hpp  queues.hpp  serial_port.hpp  utils.h
Bolt/Inc/bolt/: frames.hpp  interface.hpp  parser.hpp  visitor.hpp
Bolt/Inc/command/: motor_command.hpp
Bolt/Inc/controller/: led_controller.hpp
Bolt/Inc/interface/: pin_interface.hpp  serial_interface.hpp
Bolt/Src/: application.cpp  debug.c  led_controller.cpp  queues.cpp  serial_interface.cpp  serial_port.cpp
Bolt/Src/bolt/: battery_monitor.cpp  beep_controller.cpp  can_interface.cpp  handle_registry.cpp  icm20948_controller.cpp  icm20948_interface.cpp  icm20948_sensor_controller.cpp  led_controller.cpp  motor_command.cpp  motor_controller.cpp  (+7 more)
Core/Inc/: FreeRTOSConfig.h  main.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h  tim.h
Core/Src/: can.c  dma.c  freertos.c  freertos.cpp  gpio.c  main.c  spi.c  stm32f1xx_hal_timebase_tim.c  stm32f1xx_it.c  tim.c  usart.c
cmake/stm32cubemx/: CMakeLists.txt
docs/: COMM_PROTOCOL.md  FIRMWARE.md  PROTOCOL.md
tests/: CMakeLists.txt  CMakePresets.json  test_flash_controller.cpp  test_frames.cpp  test_parser.cpp  test_visitor.cpp
tests/stubs/: can.h  cmsis_os.h  cmsis_os2.h  main.h  peripherals.hpp  spi.h  stm32f1xx_hal.h  tim.h  usart.h
(+24 files in other folders)
